flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/WebhookInboundEvent__mdt.object-meta.xml
<CustomObject>
    <description>Metadata for inbound webhook; Validate the information received from a webhook using secret token to check the payload signature</description>
    <label>Inbound Webhook</label>
    <pluralLabel>Inbound Webhooks</pluralLabel>
</CustomObject>