flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <defaultValue>&apos;Webhook2Flow.WebHook2FlowHandler&apos;</defaultValue>
    <description>Entity used by Agent to handle the logic.  (i.e.  flow name, platform event name, etc...)</description>
    <inlineHelpText>Entity used by Agent to handle the logic.  (i.e.  flow name, platform event name, etc...)</inlineHelpText>
    <label>Actor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>