flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>Apex class to use for handling the verification and response.  (should we use a seperate Agent for verification?)</description>
    <inlineHelpText>Apex class to use for handling the verification and response.  (should we use an seperate Agent for verification?)</inlineHelpText>
    <label>Agent (ApexClass)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>