flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Custom_Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Custom_Object_Prefix__c</fullName>
    <description>Many webhooks use the same name for their objects, though the content may be different.  Common examples of this are &quot;Event&quot;, &quot;User&quot;, &quot;Message&quot;.  This prefix allows you to create custom apex-defined objects with the same name, but distinguished by a prefix.  Example:  If you define the prefix &quot;slack_&quot;, then all the custom apex-defined object &quot;Event&quot; would be &quot;slack_Event&quot;.</description>
    <inlineHelpText>Many webhooks use the same name for their objects, though the content may be different.  Common examples of this are &quot;Event&quot;, &quot;User&quot;, &quot;Message&quot;.  This prefix allows you to create custom apex-defined objects with the same name, but distinguished by a prefix.  Example:  If you define the prefix &quot;slack_&quot;, then all the custom apex-defined object &quot;Event&quot; would be &quot;slack_Event&quot;.</inlineHelpText>
    <label>Custom Object Prefix</label>
    <length>32</length>
    <type>Text</type>
</CustomField>