flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description and relevant information to describe the connections purpose and other inventory information (including security risks)</description>
    <inlineHelpText>Description and relevant information to describe the connections purpose and other inventory information (including security risks)</inlineHelpText>
    <label>Description</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>