flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Flow_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Developer_Name__c</fullName>
    <description>The name of the flow which is used to service the webhook</description>
    <inlineHelpText>The name of the flow which is used to service the webhook</inlineHelpText>
    <label>Flow Developer Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>