flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>The host name under which this webhook2flow may be initiated.  This is to ensure the webhook requests only are allowed through designated interfaces on the instance.</description>
    <inlineHelpText>The host name under which this webhook2flow may be initiated.  This is to ensure the webhook requests only are allowed through designated interfaces on the instance.</inlineHelpText>
    <label>Host</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>