flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Payload_Concatenation__c.field-meta.xml
<CustomField>
    <fullName>Payload_Concatenation__c</fullName>
    <description>Some webhooks require concatenation of header information to ensure the payload is secure. The format for this is a set of semicolon delimited strings.  If the string is enclosed in quotes, it will be used as a constant.  Otherwise a header parameter.
Example for Slack: &quot;v0:&quot;;X-Slack-Request-Timestamp;&quot;:&quot;</description>
    <inlineHelpText>Some webhooks require concatenation of header information to ensure the payload is secure. The format for this is a set of semicolon delimited strings.  If the string is enclosed in quotes, it will be used as a constant.  Otherwise a header parameter.
Example for Slack: &quot;v0:&quot;;X-Slack-Request-Timestamp;&quot;:&quot;</inlineHelpText>
    <label>Payload Concatenation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>