flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Save_Logs__c.field-meta.xml
<CustomField>
    <fullName>Save_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this will save a log of each request using the webhook2flow log object</description>
    <inlineHelpText>If checked, this will save a log of each request using the webhook2flow log object</inlineHelpText>
    <label>Save Logs</label>
    <type>Checkbox</type>
</CustomField>