flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <description>This is the secret used to create a digest signature that validates the payload.  You should always use a random string with high entropy( e.g., ruby -rsecurerandom -e &apos;puts SecureRandom.hex(20)&apos;)</description>
    <inlineHelpText>This is the secret used to create a digest signature that validates the payload.  You should always use a random string with high entropy( e.g., ruby -rsecurerandom -e &apos;puts SecureRandom.hex(20)&apos;)</inlineHelpText>
    <label>Secret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>