flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Signature_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Signature_Prefix__c</fullName>
    <description>Some webhook signatures have an embedded prefix as part of the signature parameter (for example, github uses &quot;sha256=&quot;.  Optional - can be empty if not used.</description>
    <inlineHelpText>Some webhook signatures have an embedded prefix as part of the signature parameter (for example, github uses &quot;sha256=&quot;.  Optional - can be empty if not used.</inlineHelpText>
    <label>Signature Prefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>