flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Signing_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Signing_Algorithm__c</fullName>
    <description>The algorithm used to generate the digest signature to verify the HTTP Request payload</description>
    <inlineHelpText>The algorithm used to generate the digest signature to verify the HTTP Request payload</inlineHelpText>
    <label>Signing Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hmacSHA256</fullName>
            </value>
            <value>
                <fullName>hmacSHA512</fullName>
            </value>
            <value>
                <fullName>hmacSHA1</fullName>
            </value>
            <value>
                <fullName>hmacMD5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>