flow_apps/webhook2flow/force-app/main/default/objects/WebhookInboundEvent__mdt/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <description>The name used when referencing the site in the API (Only for Site/Unauthenticated Webhook access)</description>
    <inlineHelpText>The name used when referencing the site in the API (Only for Site/Unauthenticated Webhook access)</inlineHelpText>
    <label>Unique Site URL</label>
    <length>120</length>
    <type>Text</type>
</CustomField>